# openGL-transport-simulation

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
include/glm/: glm.hpp
models/stones/: stone3.mtl
models/train/: Intercity 125 Executive Livery With Buffers.mtl
models/train_minimalistic/: mini_train.mtl
shaders/: light_source.frag  light_source.vert  model_shader.frag  model_shader.vert  simple_shader.frag  simple_shader.vert  skybox.frag  skybox.vert  specular_map.frag  specular_map.vert
src/: main.cpp
src/app/: app.cpp  app.h  stations.h  stones.h
src/controller/: Controller.cpp  Controller.h
src/glad/: glad.c
src/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  RailroadMap.cpp  RailroadMap.h  Scene.cpp  Scene.h  Train.cpp  Train.h  TrainManager.cpp  TrainManager.h  Tunnel.cpp  Tunnel.h
src/view/: Camera.cpp  Camera.h  LightSource.cpp  LightSource.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
